# contest-platform

./: .gitignore  LICENSE  README.md  compose.yaml
data/: .gitignore  config.toml
judge/: .dockerignore  Cargo.toml  Dockerfile  schema.json
judge/schema/: contest.json  message.json
judge/src/: config.rs  contest.rs  lib.rs  loader.rs  main.rs  sandbox.rs  submit.rs
judge/src/sandbox/: command.rs  landlock.rs  resource.rs  seccomp.rs
web/: .env.example  .gitignore  .prettierignore  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
web/scripts/: load.js
web/src/: app.html
web/src/lib/components/: Article.svelte  Verdict.svelte
web/src/lib/judge/: schema.d.ts
web/src/lib/judge/schema/: message.d.ts  report.d.ts  test_report.d.ts  verdict.d.ts
web/src/lib/server/: auth.ts  contestData.ts
web/src/lib/server/contest/: load.ts  schema.d.ts
web/src/lib/server/db/: index.ts  schema.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/admin/: +page.server.ts  +page.svelte
web/src/routes/api/judge/: +server.ts
web/src/routes/auth/login/: +page.server.ts  +page.svelte
web/src/routes/auth/logout/: +page.server.ts
web/src/routes/auth/signup/: +page.server.ts  +page.svelte
web/src/routes/contest/[contest]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/contest/[contest]/leaderboard/: +page.server.ts  +page.svelte
web/src/routes/contest/[contest]/task/[task]/: +page.server.ts  +page.svelte  +server.ts
web/src/routes/contests/: +page.server.ts  +page.svelte
web/src/routes/contests/[contest]/: +layout.server.ts  +page.server.ts  +page.svelte
web/src/routes/contests/[contest]/task/[task]/: +page.server.ts  +page.svelte  +server.ts
web/src/routes/contests/[name]/: +layout.server.ts  +page.server.ts  +page.svelte
web/src/routes/contests/[name]/task/[task]/: +page.server.ts  +page.svelte
web/src/routes/login/: +page.server.ts  +page.svelte
web/src/routes/logout/: +page.server.ts
web/src/routes/register/: +page.server.ts  +page.svelte
web/src/routes/signup/: +page.server.ts  +page.svelte
web/src/routes/submit/: +page.server.ts  +page.svelte
