[package]
name = "judge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum_typed_multipart = "0.11.1"
color-eyre = "0.6.3"
landlock = "0.4.0"
libc = "0.2.155"
once_cell = "1.19.0"
rlimit = "0.10.1"
seccompiler = "0.4.0"
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3.10.1"
tokio-stream = "0.1.15"
tokio = { version = "1.39.1", features = ["fs", "io-util", "macros", "parking_lot", "process", "rt-multi-thread", "signal", "sync"] }
toml = { version = "0.8.16", default-features = false, features = ["parse"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
which = "6.0.2"

# [profile.release]
# codegen-units = 1
# lto = "fat"
