[package]
name = "judge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
landlock = "0.4.0"
libc = "0.2.158"
once_cell = "1.19.0"
rlimit = "0.10.1"
seccompiler = "0.4.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = { version = "3.9.0", default-features = false, features = ["macros"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["fs", "io-util", "macros", "parking_lot", "process", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1.15"
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
which = "6.0.3"
