[package]
name = "judge"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "generate_json_schema"
path = "src/bin/generate_json_schema.rs"

[dependencies]
ahash = "0.8.11"
axum = "0.7.5"
axum_typed_multipart = "0.12.1"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
libc = "0.2.158"
once_cell = "1.19.0"
rlimit = "0.10.1"
schemars = { version = "0.8.21", features = ["uuid1"] }
seccompiler = "0.4.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "process", "macros", "sync", "signal", "fs", "parking_lot"] }
tokio-stream = "0.1.15"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["registry", "env-filter"] }
tracing-tree = "0.4.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
which = "6.0.3"
yansi = "1.0.1"

[profile.release]
lto = "thin"
